# bitnet

./: .gitignore  README.md  cim_mlp.md  pyproject.toml  setup.sh  sys_sim.md  temp.md
bitnet/: data_char.py  export_ternary.py  generate_shakespeare_char.py  model.py  ternary_kernel.py  train_shakespeare_char.py
bitnet_cim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cim_compiler/: __init__.py  gen_random_model.py  pipeline.py
cim_compiler/cimres/: __init__.py  autotuner.py  cost_model.py  dialect.py  emit_instr.py  hw_config.py  hw_simulator.py  lower_to_cimres.py  macro_layout.py  page_alloc.py  place.py  ppa_config.py  run_passes.py  run_sched_analysis.py  runtime.py  scheduler.py  verify.py
cim_compiler/cimres/passes/: __init__.py  _s0_selftest.py  canonicalize.py  common.py  cse.py
cim_compiler/export/: __init__.py  cim_op.py  export_common.py  export_fx.py  export_kv.py  inference_model.py  verify_export.py  verify_kv.py  weight_blob.py
cim_compiler/ir/: __init__.py  poc_export.py  poc_torch_mlir.py  to_mlir.py  verify_ir.py
cim_compiler/lowering/: __init__.py  buffer_kind.py  cim_jit.py  cim_lowering.py  cim_stub.c  cim_stub.py  cim_stub_lower.py  generate.py  hw_config.h  linalg_lower.py  linalg_to_llvm.py  run_sim_text.py  to_object.py
cim_compiler/lowering/aot/: Makefile  __init__.py  cim_ipc.c  (+14 more)
cim_compiler/partition/: __init__.py  classify.py  partition.py  verify_partition.py
cim_model/: __init__.py  accumulator.py  bitlinear_cim.py  generate.py  macro.py  model_cim.py  verify.py
data/shakespeare_char/: prepare.py
